# TethisLanguage

./: CMakeLists.txt  README.md
src/: main.cpp
src/core/types/complex/: AnyType.hpp  ArrayType.hpp  DynamicArrayType.hpp  KeymapType.hpp  MapType.hpp  TupleType.hpp
src/core/types/primitives/: BoolType.hpp  FloatType.hpp  IntegerType.hpp  StringType.hpp
src/parsing/: Lexer.cpp  Lexer.hpp  LexerState.hpp  Token.hpp
src/parsing/definitions/: SyntaxRules.ebnf  Tokens.def
